@@ -76,7 +76,7 @@ public class MapUtil {
 	public static long getLong(
 		Map<Long, Long> map, long key, long defaultValue) {
 
-		Long value = map.get(new Long(key));
+		Long value = map.get(key);
 
 		if (value == null) {
 			return defaultValue;
@@ -154,8 +154,8 @@ public class MapUtil {
 
 		LinkedHashMap<String, Object> map = new LinkedHashMap<String, Object>();
 
-		for (int i = 0; i < params.length; i++) {
-			String[] kvp = StringUtil.split(params[i], delimiter);
+		for (String param : params) {
+			String[] kvp = StringUtil.split(param, delimiter);
 
 			if (kvp.length == 2) {
 				map.put(kvp[0], kvp[1]);
@@ -166,7 +166,7 @@ public class MapUtil {
 				if (type.equalsIgnoreCase("boolean") ||
 					type.equals(Boolean.class.getName())) {
 
-					map.put(kvp[0], new Boolean(kvp[1]));
+					map.put(kvp[0], Boolean.valueOf(kvp[1]));
 				}
 				else if (type.equalsIgnoreCase("double") ||
 						 type.equals(Double.class.getName())) {
@@ -196,7 +196,7 @@ public class MapUtil {
 						Class<?> clazz = Class.forName(type);
 
 						Constructor<?> constructor = clazz.getConstructor(
-							new Class<?>[] {String.class});
+							String.class);
 
 						map.put(kvp[0], constructor.newInstance(kvp[1]));
 					}
@@ -207,7 +207,7 @@ public class MapUtil {
 			}
 		}
 
-		return (LinkedHashMap<String, T>) map;
+		return (LinkedHashMap<String, T>)map;
 	}
 
 	public static String toString(Map<?, ?> map) {
